--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,7 +8,7 @@ repos:
     hooks:
     -   id: clang_format
         name: Format C++ code
-        entry: python tools/clang-format.py formatall
+        entry: python tools/clang-format.py lintall
         pass_filenames: false
         types_or:
           - "c++"
