remove boost_filesystem_lib linking

--- a/editors/sc-ide/CMakeLists.txt
+++ b/editors/sc-ide/CMakeLists.txt
@@ -337,7 +337,7 @@ target_link_libraries( libscide PUBLIC
 
 target_link_libraries( SuperCollider libscide)
 
-target_link_libraries( libscide PUBLIC boost_system_lib boost_filesystem_lib)
+target_link_libraries( libscide PUBLIC boost_system_lib)
 include_directories(${boost_include_dirs})
 
 # This makes sclang/scide work with a Qt installation at a fixed location.
