Capitalize steps names

--- a/.github/workflows/test_linux.yml
+++ b/.github/workflows/test_linux.yml
@@ -25,7 +25,7 @@ jobs:
         with:
           submodules: false # don't need submodules for testing
 
-      - name: download artifacts
+      - name: Download artifacts
         uses: actions/download-artifact@v4
         with:
           name: ${{ env.ARTIFACT_FILE }}
@@ -38,7 +38,7 @@ jobs:
           ls
           unzip $ARTIFACT_FILE.zip
 
-      - name: setup environment
+      - name: Setup environment
         run: |
           # install dependencies
           sudo apt-get update
@@ -55,7 +55,7 @@ jobs:
           echo "DISPLAY=$DISPLAY" >> $GITHUB_ENV
           Xvfb $DISPLAY -screen 0 1024x768x16 &
 
-      - name: run tests
+      - name: Run tests
         shell: bash
         continue-on-error: true
         run: |
@@ -64,7 +64,7 @@ jobs:
           # run tests
           timeout 1200 $SCLANG $SCRIPT_RUN_TESTS $TEST_LIST_PROTO $TEST_LIST_RESULT
 
-      - name: post test results
+      - name: Post test results
         shell: bash
         run: |
           $SCLANG $SCRIPT_PRINT_RESULTS $TEST_LIST_RESULT
