--- a/.github/workflows/test_windows.yml
+++ b/.github/workflows/test_windows.yml
@@ -25,7 +25,7 @@ jobs:
         with:
           submodules: false # don't need submodules for testing
 
-      - name: download artifacts
+      - name: Download artifacts
         uses: actions/download-artifact@v4
         with:
           name: ${{ env.ARTIFACT_FILE }}
@@ -54,7 +54,7 @@ jobs:
           # start jack
           /c/Program\ Files/JACK2/jackd.exe --no-realtime -d dummy &
 
-      - name: run tests
+      - name: Run tests
         shell: bash
         continue-on-error: true
         run: |
@@ -63,7 +63,7 @@ jobs:
           # run tests
           timeout 1200 $SCLANG $SCRIPT_RUN_TESTS $TEST_LIST_PROTO $TEST_LIST_RESULT
 
-      - name: post test results
+      - name: Post test results
         shell: bash
         run: |
           $SCLANG $SCRIPT_PRINT_RESULTS $TEST_LIST_RESULT
