--- a/.github/workflows/test_macos.yml
+++ b/.github/workflows/test_macos.yml
@@ -25,7 +25,7 @@ jobs:
         with:
           submodules: false # don't need submodules for testing
 
-      - name: download artifacts
+      - name: Download artifacts
         uses: actions/download-artifact@v4
         with:
           name: ${{ env.ARTIFACT_FILE }}
